--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body class="bg2">
 	<div id="layer" style="opacity: 0.5"></div>
 	<img src="./images/logo2.png" id="logo" style="width: 10%; min-width: 100px;"/>
-	<div id="mission" style="font-family: 'Courier New'; font-size: 13pt;">info@xiphosprojects.com</div>
+	
 	<a href="https://www.instagram.com/xiphosprojects/" target="_blank"><<img src="./images/logo2.png" id="logo" style="width: 10%; min-width: 100px;"/>></a>
-	<a href= "mailto:info@xiphosprojects.com?subject=" target="_blank"><<div id="mission" style="font-family: 'Courier New'; font-size: 13pt;">info@xiphosprojects.com</div></a>
+	<a href= "mailto:info@xiphosprojects.com" target="_blank"><div id="mission" style="font-family: 'Courier New'; color: white;  font-size: 15pt;">info@xiphosprojects.com</div></a>
 </body>
 </html>
